[workspace]

members = [
    "client",
    "server",
    "common"
]

[workspace.dependencies]
tokio = { version = "1.26.0", features = ["full"] }
serde = "1.0.152"
serde_derive = "1.0.152"
bincode = "1.1.4"
bytes = "1.4.0"
clap = { version = "4.0.32", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"