[workspace]
members = [
    "client",
    "server",
    "common"
]

[workspace.dependencies]
anyhow = "1.0.69"
tokio = { version = "1.26.0", features = ["full"] }
serde = { version = "1.0.156", features = ["derive"] }
bincode = "1.3.3"
bytes = "1.4.0"
clap = { version = "4.0.32", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"