[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
bincode.workspace = true
serde.workspace = true
bytes.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true